--- a/index.html
+++ b/index.html
@@ -112,11 +112,13 @@
             <div class="Column_1">
                 <h1>About</h1>
                 <p>
-                    I am an aspiring software developer. In my free time I enjoy trying new food and exploring my state!
+                    I am an aspiring software developer. In my free time I enjoy creating music and exploring nature.
                     <br>
-                    <br>I am a graduate of COMING SOON
+                    <br>I studied at <a href="" target="learncodinganywhere.com">The Tech Academy</a>, there I was taught to be a full-stack software developer.
                     <br>
-                    <br>COMING SOON <a onclick="openForm()" class="contact">Contact</a> me below!
+                    <br>I am trained in HTML, CSS, JavaScript, Python, C#, .NET Framework, ASP.NET, MVC, back end development, databases, and SQL.
+                    <br>
+                    <br><a onclick="openForm()" class="contact">Contact</a> me below!
                 </p>
             </div>
         </div>
@@ -161,7 +163,7 @@
 
         <!--Footer section-->
         <footer>
-                <p class="center">Jacob Farr &nbsp;|&nbsp; ecxzero1@gmail.com&nbsp;|&nbsp;<a href="" target="_blank">Resume?<!--Currently figuring out what to put here, will adjust it later.--></a></p>
+                <p class="center">Jacob Farr &nbsp;|&nbsp; ecxzero1@gmail.com&nbsp;|&nbsp;<a href="" target="_blank">Resume<!--Currently figuring out what to put here, will adjust it later.--></a></p>
         </footer>
         <script src="./JS/portfolio.js"></script>
     </body>
