--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div id="Slideshow_Container">
                     <!--Slide 1 of 6-->
                     <div class="mySlides fade">
-                        <img class="Slideshow_Images" src="./image/java-the-hut.png" alt="Personal Photo">
+                        <img class="Slideshow_Images" src="./image/headshot.jpg" alt="Personal Photo">
                         <div class="text">I'm available to assist you on your project!</div>
                     </div>
                     <!--Slide 2 of 6-->
@@ -132,6 +132,8 @@
                     You can view my coding projects on my GitHub profile here:
                     <br>
                     <p class="center"><a href="https://github.com/Jakersf" target="_blank">My GitHub</a></p>
+                    <br>
+                    <p>My favorite project on here thus far is the <a href="https://github.com/Jakersf/Basic-C-Sharp-Projects/blob/main/Basic_C%23_Programs/BlackjackGame/BlackjackGame/Program.cs" target="_blank">Blackjack Game.</a></p>
                 </p>
             </div>
             <!--Right Column-->
