added linkedin and resume

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
         <!--Footer section-->
         <footer>
-                <p class="center">Jacob Farr &nbsp;|&nbsp; ecxzero1@gmail.com&nbsp;|&nbsp;<a href="" target="_blank">Resume<!--Currently figuring out what to put here, will adjust it later.--></a></p>
+                <p class="center">Jacob Farr &nbsp;|&nbsp; ecxzero1@gmail.com&nbsp;|&nbsp;<a href="https://docs.google.com/document/d/1jp-sgR-AWde295TGkVlmZ-JzWCgcETXc2tqjhkhUYzI/edit?usp=sharing" target="_blank">Resume</a>&nbsp;|&nbsp;<a href="https://www.linkedin.com/in/jacobfarrtech/" target="_blank">LinkedIn</a></p>
         </footer>
         <script src="./JS/portfolio.js"></script>
     </body>
